cuando estoy en el dashboard la pagina no se expande hacia la derecha como en la pagina /engines se queda un poco corta y revisando en el navegador web en la consola envia el error Connecting to 'https://cdn.jsdelivr.net/npm/chart.umd.min.js.map' violates the following Content Security Policy directive: "connect-src 'self' ws: wss:". The request has been blocked.