@@ -69,7 +69,13 @@ public class AppRoleGenerator {
             if (Files.exists(Paths.get("src/main/java"))) {
                 Files.createDirectories(srcDir);
                 Path file = srcDir.resolve("AppRole.java");
-                Files.write(file, content.getBytes(StandardCharsets.UTF_8));
+                if (Files.exists(file)) {
+                    String existing = Files.readString(file, StandardCharsets.UTF_8);
+                    if (existing.equals(content)) {
+                        return; // Up to date, do not re-touch file
+                    }
+                }
+                Files.writeString(file, content, StandardCharsets.UTF_8);
                 System.out.println("[JettraAppServer] Automatically generated/updated jcf.AppRole (" + file.toAbsolutePath() + ")");
             }
         } catch (Exception e) {
